@@ -87,12 +87,18 @@ int Core::start ()
 
     _fsm.start();
 
+    if (_clientPort != -1)
+        _clientWatchdog.start();
+
     return 0;
 }
 
 int Core::stop ()
 {
     LIBENCLOUD_TRACE;
+
+    if (_clientPort != -1)
+        _clientWatchdog.stop();
 
     _fsm.stop();
     _clientWatchdog.stop();
@@ -107,7 +113,6 @@ int Core::stop ()
 #ifndef LIBENCLOUD_DISABLE_CLOUD
     _cloud->stop();
 #endif
-
 
     emit stateChanged(StateIdle);
     emit progress(Progress());
@@ -413,7 +418,7 @@ err:
     return;
 }
 
-// Setup watchdog which disconnects upon close
+// Setup watchdog which is started/stopped according to core state
 void Core::_clientPortReceived (int port)
 {
     QString sp = QString::number(port);
@@ -421,16 +426,12 @@ void Core::_clientPortReceived (int port)
 
     LIBENCLOUD_DBG ("[Core] client port: " << sp);
 
-    if (_clientWatchdog.isRunning())
-        _clientWatchdog.stop();
-
     url.setScheme(LIBENCLOUD_API_SCHEME);
     url.setHost(LIBENCLOUD_API_HOST);
     url.setPort(port);
     url.setPath(LIBENCLOUD_API_STATUS_PATH);
 
     _clientWatchdog.setUrl(url);
-    _clientWatchdog.start();
     // _clientDown() will be invoked upon down() signal
 
     _clientPort = port;
