@@ -4,6 +4,7 @@ next:
 
 libencloud 0.7.4:
 	- [CONNECT-176] Error message gets stuck between states of the application
+	- core: fix watchdog not being restarted upon reconnect
 
 libencloud 0.7.3:
 	- [CONNECT-169] Rename to Endian Connect App and Endian Connect Service
